add graphics and circle graph

--- a/myApp/src/pages/m2p-sub2/m2p-sub2.html
+++ b/myApp/src/pages/m2p-sub2/m2p-sub2.html
@@ -19,6 +19,7 @@
 
     <ion-list-header color="Fail">
       Functional Movement Screen
+      <ion-badge color="primary" item-right>Fail</ion-badge>
     </ion-list-header>
   </ion-list>
   <ion-grid (click)="openModal()">
@@ -33,6 +34,7 @@
 
     <ion-list-header color="Pass">
       Y-Balance Test
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
     </ion-list-header>
   </ion-list>
   <ion-grid (click)="openModal2()">
