--- a/myApp/src/pages/m2p-sub3-modal/m2p-sub3-modal.html
+++ b/myApp/src/pages/m2p-sub3-modal/m2p-sub3-modal.html
@@ -13,6 +13,120 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
+
+
+
+    <ion-list no-lines>
+
+      <ion-list-header color="Fail">
+        Ankle Clearing
+        <ion-badge color="primary" item-right>Fail</ion-badge>
+      </ion-list-header>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4 text-center>
+            <img src="../../assets/img/move2perform/ankle_clearing.svg" style="height: 50px;"/>
+          </ion-col>
+          <ion-col col-4 text-center>
+            <p>Left</p>
+            <ion-badge color="primary">Within</ion-badge>
+          </ion-col>
+          <ion-col col-4 text-center>
+            <p>Right</p>
+            <ion-badge color="secondary">Behind</ion-badge>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-list>
+
+
+  <ion-list no-lines>
+
+    <ion-list-header color="Fail">
+      Lower MCS
+      <ion-badge color="primary" item-right>Fail</ion-badge>
+    </ion-list-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4 text-center>
+          <img src="../../assets/img/move2perform/lower_mcs.svg" style="height: 50px;"/>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Left</p>
+          <ion-badge color="primary">65</ion-badge>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Right</p>
+          <ion-badge color="secondary">57</ion-badge>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+
+
+
+  <ion-list no-lines>
+
+    <ion-list-header color="Pass">
+      Upper Body Clearing Tests
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
+    </ion-list-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4 text-center>
+          <img src="../../assets/img/screen_images/fcs/wrist_extension_clearing/wrist_extension_clearing-grey.svg" style="height: 50px;"/>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Left</p>
+          <ion-badge color="secondary">Pass</ion-badge>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Right</p>
+          <ion-badge color="secondary">Pass</ion-badge>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4 text-center>
+          <img src="../../assets/img/screen_images/fcs/horizontal_adduction_clearing/horizontal_adduction_clearing_right-grey.svg" style="height: 50px;"/>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Left</p>
+          <ion-badge color="secondary">Pass</ion-badge>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Right</p>
+          <ion-badge color="secondary">Pass</ion-badge>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+
+
+  <ion-list no-lines>
+
+    <ion-list-header color="Pass">
+      Upper MCS
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
+    </ion-list-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4 text-center>
+          <img src="../../assets/img/screen_images/fcs/upper_mcs/upper_mcs-grey.svg" style="height: 50px;"/>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Left</p>
+          <ion-badge color="secondary">67</ion-badge>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <p>Right</p>
+          <ion-badge color="secondary">72</ion-badge>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+
+
+
 
 </ion-content>
