--- a/myApp/src/pages/m2p-sub3/m2p-sub3.html
+++ b/myApp/src/pages/m2p-sub3/m2p-sub3.html
@@ -19,6 +19,7 @@
 
     <ion-list-header color="light" color="Fail">
       Movement Control
+      <ion-badge color="primary" item-right>Fail</ion-badge>
     </ion-list-header>
 
     <ion-grid>
