--- a/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
+++ b/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
@@ -18,114 +18,21 @@
 
 <ion-content class="m2p">
 
-  <ion-grid>
+  <ion-grid text-center>
     <ion-row>
       <ion-col col-9>
 
         <ion-row>
-          <ion-col col-2></ion-col>
-          <ion-col col-10></ion-col>
-        </ion-row>
-
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-row>
-          <ion-col col-6>L</ion-col>
-          <ion-col col-6>R</ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Extension Clearing</ion-col>
-        </ion-row>
-
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="dark">+</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/active_straight_leg_raise.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Active Straight Leg Raise</ion-col>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-8>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
         </ion-row>
 
       </ion-col>
       <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/hurdle_step.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Hurdle Step</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/shoulder_mobility.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Shoulder Mobility</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/impingment_clearing.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Impingement Clearing</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">-</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/trunk_stability_pushup.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Trunk Stability Push-up</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
         <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
@@ -134,16 +41,20 @@
       <ion-col col-9>
 
         <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/rotary_stability.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Rotary Stability</ion-col>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/hurdle_step.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="primary">1</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="primary">1</ion-badge>
+          </ion-col>
         </ion-row>
 
       </ion-col>
       <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
+        <ion-badge color="primary">1</ion-badge>
       </ion-col>
     </ion-row>
 
@@ -151,46 +62,124 @@
       <ion-col col-9>
 
         <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/flexion_clearing.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Flexion Clearing</ion-col>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/inline_lunge.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
         </ion-row>
 
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">-</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
         <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/inline_lunge.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Inline Lunge</ion-col>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/ankle_clearing.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">Pass</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">Pass</ion-badge>
+          </ion-col>
         </ion-row>
 
       </ion-col>
       <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Deep Squat</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
         <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
+
+
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/shoulder_mobility.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="fmsgold">2</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="fmsgold">3</ion-badge>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/impingment_clearing.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">-</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">-</ion-badge>
+          </ion-col>
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        <ion-badge color="fmsgold">2</ion-badge>
+      </ion-col>
+    </ion-row>
+
+
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/active_straight_leg_raise.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        <ion-badge color="secondary">1</ion-badge>
+      </ion-col>
+    </ion-row>
+
+
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-8>
+            <ion-badge color="primary">1</ion-badge>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/rotary_stability.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-8>
+            <ion-badge color="dark">+</ion-badge>
+          </ion-col>
+
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        <ion-badge color="dark">0</ion-badge>
+      </ion-col>
+    </ion-row>
+
   </ion-grid>
 
 
