add new graphics

--- a/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
+++ b/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
@@ -19,6 +19,31 @@
 <ion-content class="m2p">
 
   <ion-grid text-center>
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+            Pattern
+          </ion-col>
+          <ion-col col-4>
+            Left
+          </ion-col>
+          <ion-col col-4>
+            Right
+          </ion-col>
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        Total
+      </ion-col>
+    </ion-row>
+
+
+
+    
     <ion-row>
       <ion-col col-9>
 
@@ -156,7 +181,7 @@
 
         <ion-row>
           <ion-col col-4>
-            <img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/>
+            <img src="../../assets/img/trunk-stability-pushup-grey.svg" style="height: 30px;"/>
           </ion-col>
           <ion-col col-8>
             <ion-badge color="primary">1</ion-badge>
@@ -166,7 +191,7 @@
 
         <ion-row>
           <ion-col col-4>
-            <img src="../../assets/img/move2perform/rotary_stability.svg" style="height: 30px;"/>
+            <img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/>
           </ion-col>
           <ion-col col-8>
             <ion-badge color="dark">+</ion-badge>
@@ -177,6 +202,61 @@
       </ion-col>
       <ion-col col-3>
         <ion-badge color="dark">0</ion-badge>
+      </ion-col>
+    </ion-row>
+
+
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/move2perform/rotary_stability.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
+          <ion-col col-4>
+            <ion-badge color="secondary">2</ion-badge>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row>
+          <ion-col col-4>
+            <img src="../../assets/img/flexion-clearing-test-grey.svg" style="height: 30px;"/>
+          </ion-col>
+          <ion-col col-8>
+            <ion-badge color="secondary">-</ion-badge>
+          </ion-col>
+
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        <ion-badge color="secondary">2</ion-badge>
+      </ion-col>
+    </ion-row>
+
+
+
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-4>
+
+          </ion-col>
+          <ion-col col-8>
+            Total Score
+          </ion-col>
+
+        </ion-row>
+
+      </ion-col>
+      <ion-col col-3>
+        <ion-badge color="primary">12</ion-badge>
       </ion-col>
     </ion-row>
 
