add FCS report layout

--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -40,9 +40,18 @@
       </ion-col>
     </ion-row>
 
+    <ion-row>
+      <ion-col col-6 text-center [navPush]="pushPageFcsReportPage" [navParams]="params">
+        FCS Report
+      </ion-col>
+
+    </ion-row>
 
 
   </ion-grid>
+
+
+
   <ion-item-divider color="light">Survey</ion-item-divider>
 
   <ion-fab bottom center edge>
