--- a/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
+++ b/myApp/src/pages/m2p-sub2-modal/m2p-sub2-modal.html
@@ -43,7 +43,7 @@
 
 
 
-    
+
     <ion-row>
       <ion-col col-9>
 
@@ -57,7 +57,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
@@ -78,7 +78,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="primary">1</ion-badge>
       </ion-col>
     </ion-row>
@@ -111,7 +111,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
@@ -146,7 +146,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="fmsgold">2</ion-badge>
       </ion-col>
     </ion-row>
@@ -169,7 +169,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="secondary">1</ion-badge>
       </ion-col>
     </ion-row>
@@ -200,7 +200,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="dark">0</ion-badge>
       </ion-col>
     </ion-row>
@@ -234,7 +234,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
@@ -255,7 +255,7 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
+      <ion-col col-3 class="vertical-align-content">
         <ion-badge color="primary">12</ion-badge>
       </ion-col>
     </ion-row>
