--- a/myApp/src/pages/m2p-sub3/m2p-sub3.html
+++ b/myApp/src/pages/m2p-sub3/m2p-sub3.html
@@ -17,20 +17,22 @@
 
   <ion-list no-lines [navPush]="pushPageM3pSub1">
 
-    <ion-list-header color="light" color="Fail">
-      Movement Control
-      <ion-badge color="primary" item-right>Fail</ion-badge>
-    </ion-list-header>
 
     <ion-grid>
 
       <ion-row>
         <ion-col col-12>
-          <p>You scored below the acceptable level of movement  control.</p>
+          <p>This graph displays your results distribution of the 4  quadrants relating to performance.</p>
         </ion-col>
       </ion-row>
     </ion-grid>
 
+    <img padding src="../../assets/img/move2perform/radar-chart.svg" />
+    <button ion-button block full color="primary">More Info</button>
   </ion-list>
+
+
+
+
 
 </ion-content>
