--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -31,17 +31,41 @@
     </ion-row>
 
     <ion-row>
-      <ion-col col-6 text-center [navPush]="pushPageMove2performPage" [navParams]="params">
-        <img src="../../assets/img/M2PLogo.svg" style="max-width: 100px; padding-top: 50px;"/>
+      <ion-col col-6 text-center [navPush]="pushPageScreeningFcs">
+        <img src="../../assets/img/performance_ranking.png" style="max-height: 33px"/>
       </ion-col>
+      <ion-col col-6 text-center [navPush]="pushPageScreeningYbt">
+        <img src="../../assets/img/injury_risk_rating.svg" style="max-height: 33px"/>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
       <ion-col col-6 text-center [navPush]="pushPage" [navParams]="params">
+        <img src="../../assets/img/breath_screen.svg" style="max-height: 60px"/>
+        <p>Breathing Screen</p>
+      </ion-col>
+
+
+
+    </ion-row>
+
+
+    <ion-row>
+      <ion-col col-12 text-center [navPush]="pushPageMove2performPage" [navParams]="params">
+        <img src="../../assets/img/move2perform/my_fms_report.svg" style="max-height: 40px"/>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-12 text-center [navPush]="pushPage" [navParams]="params">
         <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
         <p>Manage Clients</p>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col col-6 text-center [navPush]="pushPageFcsReportPage" [navParams]="params">
+      <ion-col col-12 text-center [navPush]="pushPageFcsReportPage" [navParams]="params">
         FCS Report
       </ion-col>
 
@@ -61,7 +85,7 @@
 
 <ion-footer>
   <ion-toolbar color="dark">
-
+<p text-center style="color: #ffffff; font-size: 10px; padding-top: 10px;">Powered by Move2Perform</p>
   </ion-toolbar>
 </ion-footer>
 
